// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sparql-views asset:test/support/queries/SMEs_by_country.rq 1`] = `
Array [
  "epo:hasPublicationDate",
  "epo:announcesRole",
  "epo:Winner",
  "epo:playedBy",
  "epo:hasBusinessSize",
]
`;

exports[`sparql-views asset:test/support/queries/highest_value_of_contract.rq 1`] = `
Array [
  "epo:hasPublicationDate",
  "epo:refersToLot",
  "epo:describesLot",
  "epo:hasAwardedValue",
  "epo:comprisesTenderAwardOutcome",
  "epo:TenderAwardOutcome",
  "org:Organization",
  "epo:hasLegalName",
  "epo:MonetaryValue",
  "epo:hasAmountValue",
  "epo:hasCurrency",
]
`;

exports[`sparql-views asset:test/support/queries/mets_packages.rq 1`] = `
Array [
  "cdm:procurement_public",
  "cdm:work_date_document",
  "owl:sameAs",
  "cmr:creationDate",
  "cmr:lastModificationDate",
  "cdm:expression_belongs_to_work",
  "cdm:expression_uses_language",
  "cdm:manifestation_manifests_expression",
  "cdm:manifestation_type",
  "cdm:item_belongs_to_manifestation",
]
`;

exports[`sparql-views asset:test/support/queries/notice.rq 1`] = `Array []`;

exports[`sparql-views asset:test/support/queries/notices_by_buyers_country.rq 1`] = `
Array [
  "epo:hasPublicationDate",
  "epo:announcesRole",
  "epo:Buyer",
  "epo:playedBy",
  "epo:hasLegalName",
]
`;

exports[`sparql-views asset:test/support/queries/tenders_foresee_subcontracting.rq 1`] = `
Array [
  "epo:hasPublicationDate",
  "epo:refersToLot",
  "epo:isSubmittedForLot",
  "epo:foreseesSubcontracting",
]
`;

exports[`sparql-views asset:test/support/queries/values_of_tenders.rq 1`] = `
Array [
  "epo:hasPublicationDate",
  "epo:refersToLot",
  "epo:describesLot",
]
`;

exports[`sparql-views asset:test/support/queries/winners.rq 1`] = `
Array [
  "epo:Notice",
  "epo:hasPublicationDate",
  "epo:refersToLot",
  "epo:describesLot",
  "epo:hasAwardedValue",
  "epo:comprisesTenderAwardOutcome",
  "epo:TenderAwardOutcome",
  "org:Organization",
  "epo:hasLegalName",
  "epo:MonetaryValue",
  "epo:hasAmountValue",
  "epo:hasCurrency",
]
`;

exports[`sparql-views failed query 1`] = `
[Error: Parse error on line 1:
not a query
^
Expecting 'EOF', 'BASE', 'IRIREF', 'PREFIX', 'PNAME_NS', 'CONSTRUCT', 'DESCRIBE', 'ASK', 'SELECT', '(', 'LOAD', 'CREATE', 'INSERTDATA', 'DELETEDATA', 'DELETEWHERE', 'DELETE', 'INSERT', 'WITH', 'a', '!', '^', 'PNAME_LN', 'CLEAR', 'DROP', 'ADD', 'MOVE', 'COPY', got 'NOT']
`;
